@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
+<labels>
+	<label index="optgroup">Sledování času</label>
+	<label index="timetrackedPerson">Zaznamenaný čas osoby</label>
+	<label index="timetrackedRoles">Zaznamenaný čas role</label>
+</labels>
