@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
+<labels>
+	<label index="optgroup">Zeiterfassung</label>
+	<label index="timetrackedPerson">Person hat Zeit erfasst</label>
+	<label index="timetrackedRoles">Rollen haben Zeit erfasst</label>
+	<label index="person.trackedinproject">Hat Zeit in Projekt erfasst</label>
+</labels>
