@@ -1,6 +1,7 @@
 todoyu timetracking changelog
 
 timetracking 1.2.0 - not released yet
+	* Added: Person filter widget: has tracked time in project
 	* Added: Show info about chargeable workload in track in the tracks list
 
 timetracking 1.1.4 - not released yet
